--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hw15",
   "version": "0.1.0",
+  "homepage": "https://sofiaputlyuk.github.io/hw15",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
